syntax = "proto3";

package pkg;

import "google/protobuf/timestamp.proto";

option go_package = "secure-messaging-system/pkg";

message Message {
  string sender_id = 1;
  string receiver_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  string encrypted_text = 4;
}